--- a/css/type.css
+++ b/css/type.css
@@ -7,7 +7,7 @@
 
 
 .container{
-    background-color: lightblue;
+    background-color: blue;
     max-width: 100%;
     height: 81px;
 
@@ -16,17 +16,17 @@
 .contenitore{
     max-width: 1165px;
     height: 34px;
-    background-color: yellow;
+    background-color: blue;
     display: flex;
 }
 
 .logo{
-    width: 25%;
+    width: 20%;
     
 }
 
 .link{
-    width: 50%;
+    width: 60%;
     text-align: center;
     display: flex;
     list-style-type: none; 
@@ -35,7 +35,7 @@
 
 
 .login{
-    width: 25%;
+    width: 20%;
    text-align: right;
 
 }
