--- a/css/type.css
+++ b/css/type.css
@@ -6,7 +6,7 @@
 
 /* HEADER */
 .container{
-    background-color: blue;
+    background-color:rgb(37, 94, 233);
     max-width: 100%;
     height: 81px;
 
@@ -15,7 +15,7 @@
 .contenitore{
     max-width: 1165px;
     height: 34px;
-    background-color: blue;
+    background-color:rgb(37, 94, 233);
     display: flex;
 }
 
@@ -43,6 +43,7 @@
     height: 494px;
     background-image:url(../img/jumbo.png);
     background-size: cover;
+    padding-top:30px;
 }
 
 .sezione-rettangolo{
@@ -58,10 +59,10 @@
 
 
 #padding-top{
-    padding-top: 50px;
-    margin: 0 50px;
+    padding-top: 35px;
+    margin: 0 100px;
     color: white;
-    font: 25px;
+    font-size: 20px;
     text-align: center;
 }
 
@@ -69,21 +70,6 @@
     justify-content: space-between;
     align-items: flex-end;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -95,7 +81,10 @@
 }
 
 .col-quaranta p{
-    margin: 0 30px;
+    margin-left: 30px;
+    margin-right: 150px;
+    font-size: 20px;
+    padding-top: 30px;
     
 }
 
@@ -107,17 +96,16 @@
 .col-sessanta{
     width: 60%;
     height: 500px;
-    background-color: ;
 }
 
 .col-quaranta{
     width: 40%;
-    background-color: pink;
+    height: 500px;
 }
 
 h2{
-    font-size: 30px;
-    text-align: center;
+    font-size: 50px;
+    text-align: left;
     margin: 0 30px;
 }
 
@@ -138,8 +126,6 @@ h2{
 
 
 
-
-
 .terza-sezione{
     width: 100%;
    padding: 40px 0;
@@ -150,7 +136,6 @@ h2{
 
 .section{
     padding-top: 30px;
-    padding-bottom: 30px;
 }
 
 
@@ -167,15 +152,12 @@ h2{
 
 .quarta-sezione{
     width: 100%;
-    background-color: gray;
-
-
+    background-color: lightgrey;
 }
 
 .quadrato-100{
     width: 1200px;
     height: 868px;
-    background-color: lightgray;
 }
 
 .quadrato-100 h2{
@@ -183,9 +165,19 @@ h2{
     text-align: center;
 }
 
+#sfondo--100{
+    background-image: url(../img/stars.svg);
+    background-repeat: no-repeat;
+    background-position:top;
+}
+
 .quadrato-100 p{
     text-align: center;
+    padding-top: 20px;
+    margin: 0 120px;
+    font-size: 20px;
 }
+
 .quadrato-100 img{
     display:block;
     margin:0px auto;
@@ -197,7 +189,6 @@ h2{
     
 }
 
-
 .quad-col{
     max-width:1200px;
     height: 553px;
@@ -208,15 +199,13 @@ h2{
 .colonna-doppia{
     width: 30%;
     height: 536px;
-    background-color: pink;
-    border: 1px solid black;
+    background-color:;
 }
 
 .colonna-singola{
     width: 17.5%;
     height: 536px;
-    background-color: yellowgreen;
-    border: 1px solid black;
+    background-color: ;
 }
 
 .footer{
@@ -228,17 +217,26 @@ h2{
 .foot{
     width: 1200px;
     height: 58px;
-    background-color: greenyellow;
-}
-
-#log{
-    /* text-align: start; */
-}
-
-#bott{
-    /* text-align: end; */
+    background-color: ;
 }
 
 .white{
     color: white;
+}
+
+ul {
+    list-style-type: none;
+}
+
+.ultima-sezione h2, h3{
+    color: blue;
+}
+
+.ultima-sezione li{
+    color: white;
+    margin: 10px;
+}
+
+#img_size{
+    font-size: 10px;
 }
